# GreasePad

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  _config.yml  index.md
src/: CMakeLists.txt  aabb.cpp  aabb.h  adjustment.cpp  adjustment.h  commands.cpp  commands.h  conics.cpp  conics.h  conncomp.cpp  conncomp.h  constants.h  constraints.cpp  constraints.h  global.h  greasepad.pro  greasepad.qrc  main.cpp  mainscene.cpp  mainscene.h  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  matfun.h  matrix.cpp  matrix.h  qconstraints.cpp  qconstraints.h  qformattool.cpp  qformattool.h  qgroup.cpp  qsegment.cpp  qsegment.h  qstroke.cpp  qstroke.h  quantiles.cpp  quantiles.h  state.cpp  state.h  (+12 more)
src/geometry/: aabb.h  acute.h  conics.h  minrot.h  skew.h
src/graphics/: qstroke.cpp  qstroke.h
src/gui/: logger.cpp  logger.h  mainscene.cpp  mainscene.h  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  qformattool.cpp  qformattool.h
src/obsolete/: statistics.h  uncertain.cpp  uncertain.h
src/reasoning/: adjustment.cpp  commands.cpp  commands.h  constraints.cpp  find.h  global.h  kernel.h  matrix.cpp  quantiles.h  state.cpp
src/statistics/: chisquared.h  exponential.h  gamma.h  iscov.h  normal.h  prob.h  uniform.h
src/uncertain/: quncertain.cpp  quncertain.h  uelement.h  uncertain.cpp  upoint.cpp  upoint.h  usegment.cpp  usegment.h  ustraightline.cpp  ustraightline.h
